--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  table_calendar: ^3.0.9
-  intl: ^0.18.0
+  table_calendar: ^3.0.8
+  intl: ^0.17.0
   google_fonts: ^4.0.3
   flutter_bloc: ^8.1.2
   bloc: ^8.1.1
   timelines: ^0.1.0
+  easy_localization: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -64,10 +65,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
