--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   easy_localization: ^3.0.1
   equatable: ^2.0.5
   flutter_svg: ^2.0.2
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
