--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   equatable: ^2.0.5
   flutter_svg: ^2.0.2
   flutter_datetime_picker: ^1.5.1
+  very_good_analysis: ^4.0.0+1
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
