--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   very_good_analysis: ^4.0.0+1
   uuid: ^3.0.7
+  scrollable_positioned_list: ^0.3.5
 
 dev_dependencies:
   flutter_test:
